--- a/Java/Java面经/数据库/数据库隔离级别的实现.md
+++ b/Java/Java面经/数据库/数据库隔离级别的实现.md
@@ -5,7 +5,7 @@
 * Select 语句采用的无锁策略，也就更容易产生脏读。
 
 ## 读已提交-Read Commited
-* 该隔离级别下的一致性读取，读的都是最新版的快照，每次都快照都会被重置成最新的值
+* 该隔离级别下的一致性读取，读的都是最新版的快照，每次读快照都会被重置成最新的值
 * 对于Locking Reads，UPDATE,DELETE,InnoDB的锁策略只锁索引记录，并没有用间隙锁来锁范围，所以容易产生幻读问题。
 
 ## 可重复读- Repeatable Read
