--- a/Java/设计模式/设计模式.md
+++ b/Java/设计模式/设计模式.md
@@ -8,14 +8,13 @@
 
 开闭原则：对扩展开放，对修改关闭
 
-迪米特原则：
+迪米特原则：一个对象应该对其他对象有最少的了解
 
-里氏替换：
+里氏替换：子类可以扩展父类的功能，但不能改变员有父类的功能
 
-依赖倒置原则：
+依赖倒置原则：面向接口编程
 
-接口隔离原则:
-一个类对另一个类的依赖应该建立在最小的接口上。
+接口隔离原则:一个类对另一个类的依赖应该建立在最小的接口上。
 
 
 
