--- a/Java/Java面经/公司面经汇总/美团java面试题/美团面经.md
+++ b/Java/Java面经/公司面经汇总/美团java面试题/美团面经.md
@@ -43,3 +43,27 @@
 2. 设计题：美团商家的点赞系统
 3. cap（简单说了只知道只能满足两个）
 4. 如果数据量增加，如何分库分表
+
+
+
+# 美团一面 美团财务
+
+2021/9/8 20：00-21：00
+1. 项目（细节，框架，技术难点）
+2. 数据库特性（ACID）
+3. 索引
+4. A,C,I,D是如何实现的
+5. MVCC
+6. 数据库慢查询，如何分析
+7. 基本数据类型
+8. synchornized介绍（）
+9. 多线程
+10. 对于1个G的文件，如何统计里面的高频top10 字符串
+11. 如何实现高并发的测试（cyclicbarrier）
+12. 分布式锁
+
+
+算法题：求平方根
+
+# 美团二面
+2021/9/10 14：00-
