--- a/Java/Java面经/公司面经汇总/美团java面试题/美团牛客面经.md
+++ b/Java/Java面经/公司面经汇总/美团java面试题/美团牛客面经.md
@@ -379,20 +379,20 @@ head filename
 链接：https://www.nowcoder.com/discuss/711243?type=2&channel=-1&source_id=discuss_terminal_discuss_hot_nctrack
 来源：牛客网
 
-1. 线程池，核心线程数、最大线程数、阻塞队列所带来的线程数变化流程，抛弃策略
-2. JVM的垃圾回收方法（讲了5种，把一面中不会的三色标记法讲了一下）
-3. StringBuilder与StringBuffer的区别
-4. HashMap的底层结构
-5. 除了拉链法以外，还有什么方法可以解决hash冲突（忘了...hashmap很早看的）
-6. ConcurrentHashMap为什么可以保证并发安全
+##1. 线程池，核心线程数、最大线程数、阻塞队列所带来的线程数变化流程，抛弃策略
+##2. JVM的垃圾回收方法（讲了5种，把一面中不会的三色标记法讲了一下）
+##3. StringBuilder与StringBuffer的区别
+##4. HashMap的底层结构
+##5. 除了拉链法以外，还有什么方法可以解决hash冲突（忘了...hashmap很早看的）
+##6. ConcurrentHashMap为什么可以保证并发安全
    cas+synchornized+volatile
-7. tcp的四次挥手
-8. 服务端如果在收到客户端的挥手信号的时候，已经没有需要发送的数据了，能不能改成三次挥手（我回答可以，面试官说这是一题开放题）
-9.  Redis的主从复制
-10. Redis主从复制过程中发生宕机了怎么办（不会）
-11. 消息队列的选择，项目中用到了rabbitmq，简单介绍了为什么选它，以及其他的常见mq
-12. 快排与堆排序的比较（堆排序具体过程忘了...）
-13. 如果在排序后，两个相同的数的前后位置保持不变，就认为排序是稳定，那么快排是稳定的吗？（不稳定）
+##7. tcp的四次挥手
+##8. 服务端如果在收到客户端的挥手信号的时候，已经没有需要发送的数据了，能不能改成三次挥手（我回答可以，面试官说这是一题开放题）
+##9.  Redis的主从复制
+##10. Redis主从复制过程中发生宕机了怎么办（不会）
+##11. 消息队列的选择，项目中用到了rabbitmq，简单介绍了为什么选它，以及其他的常见mq
+##12. 快排与堆排序的比较（堆排序具体过程忘了...）
+##13. 如果在排序后，两个相同的数的前后位置保持不变，就认为排序是稳定，那么快排是稳定的吗？（不稳定）
 
 
 #7. 
@@ -400,16 +400,16 @@ head filename
 链接：https://www.nowcoder.com/discuss/711060?source_id=profile_create_nctrack&channel=-1
 来源：牛客网
 
-4.AQS中的加锁解锁大概过程
+##4.AQS中的加锁解锁大概过程
 
-5.项目中使用多线程有考虑过负面作用吗，怎么解决
+##5.项目中使用多线程有考虑过负面作用吗，怎么解决
 
-6.线程池参数（这里自己详细扩展了阻塞队列ArrayBlockingQueue,LinkedBlockingQueue在源码上的区别）
+##6.线程池参数（这里自己详细扩展了阻塞队列ArrayBlockingQueue,LinkedBlockingQueue在源码上的区别）
 
-7.SPI了解吗（只知道JDBC那里用到了Driver和DriverManager），这里引到了双亲委派
+##7.SPI了解吗（只知道JDBC那里用到了Driver和DriverManager），这里引到了双亲委派
 Service Provider Interface，是一种服务发现机制，它通过在classpath路径下的meta-inf/services文件夹查找文件。
 
-8.介绍一下双亲委派（自己详细介绍了双亲委派，什么时候会打破双亲委派，tomcat中的类加载）——会说就多说点。。。。
+##8.介绍一下双亲委派（自己详细介绍了双亲委派，什么时候会打破双亲委派，tomcat中的类加载）——会说就多说点。。。。
 第二种，是JNDI、JDBC等需要加载SPI接口实现类的情况。
 
 第三种是为了实现热插拔热部署工具。为了让代码动态生效而无需重启，实现方式时把模块连同类加载器一起换掉就实现了代码的热替换。
@@ -419,12 +419,214 @@ Service Provider Interface，是一种服务发现机制，它通过在classpath
 第五种时OSGI、Jigsaw等模块化技术的应用。
 
 
-9.Mysql索引了解吗，介绍一下底层结构，为什么选用B+树
+##9.Mysql索引了解吗，介绍一下底层结构，为什么选用B+树
 
-10.设置索引的原则（这里结合实习项目用例子解释）
-
-
-11.sql优化（讲到了实习中的的join优化，开启MRR, join buffer，使用BKA算法）
+##10.设置索引的原则（这里结合实习项目用例子解释）
 
 
-12.算法题：最长回文子串（两种方法实现）
+##11.sql优化（讲到了实习中的的join优化，开启MRR, join buffer，使用BKA算法）
+
+
+##12.算法题：最长回文子串（两种方法实现）
+
+
+#8.  
+作者：julia_
+链接：https://www.nowcoder.com/discuss/730153?type=all&order=time&pos=&page=1&ncTraceId=&channel=-1&source_id=search_all_nctrack
+来源：牛客网
+
+## 1.Spring AOP 底层原理
+使用了动态代理的技术，利用截取消息的方式，对该消息进行装饰，以取代原有对象行为的执行
+
+## 2.HashMap
+### 2.1 底层数据结构
+数组+链表+红黑树
+### 2.2 如何扩容
+数组变为2倍，然后将原数组的数据迁移过去，
+因为新的索引为hash&(n-1)，意味着原来的hash所对应的那一位是否为0，0不变，1则新位置为原位置+旧数组长度。
+
+## 3.ConcurrentHashMap
+### 3.1 如何实现线程安全
+synchornized +cas +volatile
+### 3.2 size()方法是加锁的吗？如何实现的（baseCount+counterCells）
+没有加锁，用volatile修饰的baseCount
+
+## 4. 线程池参数
+核心线程数
+最大线程数
+阻塞队列
+keepAliveTime
+拒绝策略
+ThreadFactory
+Unit
+
+## 5. 线程池大小如何设置
+根据计算密集型以及 IO密集型
+![](images/2021-09-07-10-57-47.png)
+![](images/2021-09-07-10-57-57.png)
+
+## 6.IO 密集=N cpu*2如何计算
+
+
+## 7.synchronized 的锁优化
+
+1. 偏向锁
+2. 轻量级锁
+3. 重量级锁
+4. 锁消除
+5. 锁粗化
+6. 自旋锁
+
+## 8.常用垃圾收集器
+![](images/2021-09-07-11-12-15.png)
+
+serial:单线程
+parnew：serial的多线程版本
+parallel scavenge：多线程的收集器，目的是为了增加吞吐量
+cms：划时代的意义在于垃圾回收线程可以跟用户线程同时工作，
+使用标记清除算法收集老年代垃圾
+工作流程主要有如下4个步骤：
+* 初始标记：仅仅只是标记一下GC Roots能直接关联到的对象，速度很快，需要停顿（stop-the-world）
+* 并发标记：进行gc roots tracing的过程，它在整个回收过程中耗时最长，不需要停顿
+* 重新标记：为了修正并发标记期间因用户程序继续运作而导致标记产生变动的那一部分对象的标记记录，需要停顿
+* 并发清除：清理垃圾，不需要停顿
+**在整个过程中耗时最长的并发标记和并发清除过程中，收集器线程都可以与用户线程一起工作，不需要进行停顿。**
+
+
+
+g1：它是面向服务端应用的垃圾收集器，在多cpu和大内存的场景下有很好的性能。
+
+
+## 9. G1有哪些特点
+G1 把堆划分成多个大小相等的Region，新生代和老年代不再物理隔离。
+
+## 10. 如果线上 OOM， 如何排查
+使用top命令查看一下线上的CPU，内存是否正常。
+定位异常进程，看日志。
+如果是OOM,用jstat -gc pid 1000 100(每秒)监控JVM内存运行状况和gc频率
+jmap -dump ，使用jmap dump 内存快照
+使用工具进行分析
+
+## 11. MySQL事务隔离级别
+读未提交：
+读已提交：
+可重复读：
+可串行化
+
+## 12. 可重复读解决了哪些问题
+脏读、幻读、不可重复读的区别：1、脏读就是指当一个事务正在访问数据，并且对数据进行了修改；但是未提交，这时候另一个事务可以看到该事务没有提交的更新结果，这样造成的问题就是，如果第一个事务回滚，那么第二个事务在此所“看到”的数据就是一笔脏数据。
+
+
+2、不可重复读是指在一个事务内，多次读同一数据；
+3、幻读是指当事务不是独立执行时发生的一种现象。
+
+不可重复读的重点是修改 :同一事务，两次读取到的数据不一样。
+
+幻读的重点在于新增或者删除
+
+同样的条件 , 第 1 次和第 2 次读出来的记录数不一样
+
+脏读：强调的是第二个事务读到的不够新。
+
+
+## 13. 脏读，不可重复读  幻读
+
+
+## 14 聚集索引 非聚集索引
+对于聚簇索引存储来说，行数据和主键B+树存储在一起，辅助键B+树只存储辅助键和主键，主键和非主键B+树几乎是两种类型的树。对于非聚簇索引存储来说，主键B+树在叶子节点存储指向真正数据行的指针，而非主键。
+
+## 15.慢查询优化，会考虑哪些优化
+
+
+## 16. 分页查询
+select * from table limit 5;
+## 17. redis分布式锁
+
+## 18. 缓存穿透，缓存击穿 ，缓存雪崩以及解决方法
+
+缓存穿透：数据既不在数据库中也缓存中，布隆过滤器
+
+缓存击穿：热点数据在缓存中失效，大量请求打击到了数据库中， 热点数据不失效
+
+
+缓存雪崩：大量数据在缓存中失效，给expire命令给过期时间加一个随机数，防止同时失效。
+
+## 19 二叉搜索树第K小的元素
+```java
+class Solution {
+
+    int res,k;
+    public int kthLargest(TreeNode root, int k) {
+        this.k=k;
+        dfs(root);
+        return res;
+    }
+
+    void dfs(TreeNode root){
+        if(root==null) return;
+
+        dfs(root.right);
+        if(k==0) return;
+        k--;
+        if(k==0) res=root.val;
+        dfs(root.left);
+    }
+}
+
+```
+
+
+##3. HashMap
+###3.1 数据结构
+###3.2 扩容
+###3.3 扩容过程中链表如何迁移到新的位置（如果hash值第N+1位为0，则表示不需要调整该链表节点位置；如果为1，表示需要调整到 原索引+原数组长度的位置）
+###3.4 为什么线程不安全
+put 的时候导致多线程数据不一致
+resize 多线程的时候导致形成环状
+
+###3.5 什么情况下成为一个环状
+头插法
+##4. CurrentHashMap
+
+##5. LRU是什么？如何实现
+使用双向链表+哈希表来实现。
+
+##6. 平衡二叉树
+##7. 堆是什么？如何调整
+##8. 口述：二叉树最近的祖先节点
+```java
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if(root == null || root == p || root == q) return root;
+        TreeNode left = lowestCommonAncestor(root.left, p, q);
+        TreeNode right = lowestCommonAncestor(root.right, p, q);
+        if(left == null) return right;
+        if(right == null) return left;
+        return root;
+    }
+}
+
+```
+##9. 栈和队列，举个使用场景例子
+##10. MySQL为什么InnoDB是默认引擎
+##11. MySQL为什么使用B+ 树
+##12. B+树的叶子节点链表是单向还是双向？双向，用于倒序
+##13. MVCC是什么？作用？
+##14. 更新是如何保证一致的？当前读
+##15. 如何回滚一条记录？undo log
+##16. undo log具体怎么回滚
+##17. 如何查询慢sql产生的原因
+##18. 索引失效的情况
+##19. redis数据集合
+##20. 有序集合
+###20.1 应用场景、底层实现
+###20.2 为什么数据量小的时候用压缩列表
+###20.3 压缩列表 跳跃表的区别
+##21. redis主从复制
+###21.1 原理
+###21.2 通过什么复制？RDB
+###21.3 增量复制命令存在哪里？缓冲区
+##22. RDB AOF优缺点
+##23. Spring AOP原理 好处
+##24. bean的初始化过程
+##25. 算法题：topK
