--- a/Java/Java面经/公司面经汇总/美团java面试题/美团面经.md
+++ b/Java/Java面经/公司面经汇总/美团java面试题/美团面经.md
@@ -67,3 +67,28 @@
 
 # 美团二面
 2021/9/10 14：00-
+1. 项目
+2. 项目如果要提升的话，觉得哪里可以改进
+3. 引入redis
+4. redis的主从同步
+5. redis数据丢失的情况（说了写回的时候丢失，还有什么时候会丢失，复盘的时候主从切换的时候丢失）
+6. redis数据不一致的可能性（缓存不一致）
+7. redis 是 cap的哪个（ap,没说好，应该说哨兵模式下，主库宕机后，从库投票上线）
+8. mysql索引
+9. mysql主从同步（全同步，半同步）
+10. mysql如何持久化
+11. ThreadLocal （弱引用，说成软引用了，好像面试官没发现）
+12. 四大引用
+13. gc的时候软引用与弱引用的区别
+* 强引用。直接new
+* 软引用。通过SoftReference创建，在内存空间不足的时候直接销毁，即它可能最后的销毁地点是在老年区
+* 弱引用。通过WeakReference创建，在GC的时候直接销毁。即其销毁地点必定为伊甸区
+* 虚引用。通过PhantomReference创建，它和不存也一样，「非常虚，只能通过引用队列在进行一些操作，主要用于堆外内存回收
+
+14.  value为什么不会是弱引用（瞎吉儿答得）
+ 不设置为弱引用，是因为不清楚这个Value除了map的引用还是否还存在其他引用，如果不存在其他引用，当GC的时候就会直接将这个Value干掉了，而此时我们的ThreadLocal还处于使用期间，就会造成Value为null的错误，所以将其设置为强引用。
+
+
+反问
+
+这么一看总结下来问题挺多哈
