--- a/Java/Java面经/算法/动态规划.md
+++ b/Java/Java面经/算法/动态规划.md
@@ -20,6 +20,23 @@
 明确[状态] -->定义 dp数组的含义 
 明确[选择] -> 明确 base case.
 
+## 动态规划理论
+动态规划作为一个非常成熟的算法思想，很多人对此已经做了非常全面的总结。我把这部分理论总结为“一个模型三个特征”。
+
+**一个模型**，指的是动态规划适合解决的问题的模型。把这个模型定义为“多阶段决策最优解模型”。
+
+一般是用动态规划来解决最优问题。而解决问题的过程，需要经历多个决策阶段。每个决策阶段都对应着一组状态。然后我们寻找一组决策序列，经过这组决策序列，能够产生最终期望求解的最优值。
+
+什么是“三个特征”？它们分别是最优子结构，无后效性和重复子问题。 这三个概念比较抽象。
+
+1. 最优子结构
+最优子结构指的是，问题的最优解包含子问题的最优解。反之来说就是，可以通过子问题的最优解，推导出问题的最优解。把最优子结构，推导出问题的最优解。如果把最优子结构，对应到动态规划问题模型中，可以理解为，后面阶段的状态可以通过前面阶段的状态推导出来。
+
+2. 无后效性
+无后效性由两层含义，第一层含义是，在推导后面阶段的状态的时候，我们只关心前面阶段的状态值，不关心这个状态是一步一步推导出来的。第二层含义是，某阶段状态一旦确定，就不受之后阶段的决策影响。无后效性是一个非常“宽松”的要求。只要满足前面提到的动态规划问题模型，其实基本上都会满足其后效性。
+
+3. 重复子问题
+不同的决策序列，到达某个相同的阶段时，可能会产生重复的状态。
 
 
 ## 0-1 背包
