--- a/社招面经/2024/网上面经/数据库.md
+++ b/社招面经/2024/网上面经/数据库.md
@@ -1,4 +1,4 @@
-为什么MyISAM查询性能好？
+#为什么MyISAM查询性能好？
 https://time.geekbang.org/column/article/80495
 
 索引结构：MyISAM使用非聚簇索引，其索引文件中的索引指向数据结构中的表数据。这种结构使得MyISAM的查询能够直接定位到文件的偏移量，从而比InnoDB的聚簇索引查询速度更快1。
@@ -11,7 +11,7 @@ https://time.geekbang.org/column/article/80495
 
 
 
-如何用过sql实现乐观锁与悲观锁
+# 如何用过sql实现乐观锁与悲观锁
 
 乐观锁
 update table
@@ -25,3 +25,21 @@ version = #{version}
 https://zhuanlan.zhihu.com/p/423436230
 
 通过重写LoaderClass类的loadClass方法，来重写类加载器
+
+#  Doublewrite Buffer（双写缓冲区）机制
+
+![alt text](image.png)
+
+双写缓冲区是为了解决因页写损坏导致的数据不一致问题。当InnoDB要将一个数据页写入磁盘时，它首先将该页的一个副本写入双写缓冲区，然后再写入其实际位置。如果在写入实际位置的过程中发生了崩溃，InnoDB可以从双写缓冲区中恢复该页的正确副本。
+
+
+重做日志记录了所有对数据库的更改，这些更改在崩溃恢复期间是必需的。当发生事务提交时，相关的重做日志记录会被刷新到重做日志文件（ib_logfile0....）中。这些日志记录允许在系统崩溃后重新应用更改，从而确保数据的持久性
+
+
+双写缓冲区和重做日志是协同工作的：
+1 数据修改：当一个事务修改数据时，这些更改首先被记录在重做日志缓冲区（redo log buffer）中。
+2 日志先行：在事务提交之前，相关的重做日志记录必须被刷新到重做日志文件中（这称为日志先行或write-ahead logging）。
+3 数据页写入：当数据页需要被写入磁盘时，它首先被写入双写缓冲区，然后再写入其实际位置。这个过程中也会生成相应的重做日志记录。
+4 崩溃恢复：如果系统崩溃，InnoDB可以使用重做日志来恢复未提交的事务。如果检测到页写损坏，它可以从双写缓冲区中恢复受影响的页。
+
+即使双写缓冲区正常地将数据页写入磁盘，重做日志缓冲区中的相应记录仍然需要被写入重做日志文件。并且它们是相互补充的，而不是互相替代的。这是因为重做日志不仅用于恢复页写损坏的情况，还用于在系统崩溃后重新应用所有已提交的更改。双写缓冲区和重做日志是解决不同问题的两种机制，它们一起工作以确保数据的完整性和恢复能力。
