--- a/Java/Java面经/JVM/3.JVM垃圾回收.md
+++ b/Java/Java面经/JVM/3.JVM垃圾回收.md
@@ -1,7 +1,7 @@
 
 
 [toc]
-##JVM垃圾回收
+## JVM垃圾回收
 
 垃圾收集器主要做三件事：**哪些内存需要回收，什么时候回收，怎么回收**。
 
@@ -12,7 +12,7 @@
 ###1. 判断对象已死（哪些内存需要回收）
 
 
-####1.1 引用计数器
+#### 1.1 引用计数器
 
 * 1. 为每一个对象添加一个引用计数器，统计指向该对象的引用次数。
 * 2. 当一个对象有相应的引用更新操作时，则对目标对象的引用计数器进行增减
@@ -21,7 +21,7 @@
 主流的Java虚拟机中并没有选用引用技术算法来管理内存，因为这个简单的技术方式在处理一些 相互依赖，循环引用等就会非常复杂。可能会存在不再使用但又不能回收的内存 ,造成内存泄漏。
 
 
-####1.2 可达性分析法
+#### 1.2 可达性分析法
 Java ， C#等主流语言的内存管理子系统，都是通过可达性分析算法来判定对象是否存活的。
 
 它的算法思路是通过定义一系列称为 GC Roots 根节点作为起始节点集，向下搜索，搜索走过的路径称为引用链，当一个对象到GC Roots没有任何引用链相连，对象不可达（已死）
@@ -46,16 +46,16 @@ GC Roots包括：
 **虚引用**：所有类型中最弱的一个，一个持有虚引用的对象和没有引用几乎是一样的，随时可能被垃圾回收器回收，当试图通过虚引用的get()方法取得强引用时，总是会失败。
 
 
-###2. 垃圾回收算法（怎么回收）
+### 2. 垃圾回收算法（怎么回收）
 
-####2.1 标记-清除算法(mark-sweep)
+#### 2.1 标记-清除算法(mark-sweep)
 ![](2021-04-06-21-08-57.png)
 * 标记无引用的死亡对象所占据的空闲内存，并记录到空闲列表中。（free list）。
 * 当需要创建新对象时，内粗难管理模块会从free list中寻找空闲内存，分配给新建的对象。
 * 这种清理方式其实非常简单高效，但是也有一个问题内存碎片化太严重了。
 
 
-####2.2 标记-复制算法(mark-copy)
+#### 2.2 标记-复制算法(mark-copy)
 ![](2021-04-06-21-13-36.png)
 
 * 这种方式是把内存分成两份，分别用两个指针from和to维护，并且只是用from指针指向的内存区域，
@@ -65,20 +65,20 @@ GC Roots包括：
 * 改进--
 
 
-####2.3 标记-整理算法(mark-compact)
+#### 2.3 标记-整理算法(mark-compact)
 ![](2021-04-06-21-20-32.png)
 * 对于存活率较高时使用复制算法效率就会变低，因此堆内存中的老年代不适用复制算法。
-* 标记过程与标记-清楚一样，标记完后不直接清理还是让存活的对象都向一段移动，然后直接清理端边界以外的内存。
+* 标记过程与标记-清除一样，标记完后不直接清理还是让存活的对象都向一段移动，然后直接清理端边界以外的内存。
 * 这种算法能够解决内存碎片化问题，但压缩算法的性能开销也不小。
 
 
-####2.4 分代收集算法
-* 根据对象存货周期的不同将内存划分为几块（新生代，老年代）
+#### 2.4 分代收集算法
+* 根据对象存活周期的不同将内存划分为几块（新生代，老年代）
 * 新生代，每次垃圾收集都有大量的对象死去，只有少量存活，选用复制算法
 * 老年代，使用 标记-清理/ 标记-整理
 
 
-###3. 垃圾回收器
+### 3. 垃圾回收器
 ![](2021-04-06-21-30-20.png)
 
 
