--- a/Java/Spring/3.Spring循环依赖.md
+++ b/Java/Spring/3.Spring循环依赖.md
@@ -184,3 +184,25 @@ getSingleton->回调createBean
 
 ![图 39](../../images/a21587aa7980280e27b61978de5aa91a74768a73185253288c0bc53fa86dc01c.png)  
 
+
+
+## spring 循环依赖
+
+
+三级缓存
+
+为什么 二级缓存不行
+
+在Spring框架中，当添加了AOP功能时，循环依赖的处理变得更为复杂。这主要是因为AOP代理的创建通常发生在bean的初始化过程后期，即在bean的所有属性被注入并且经过了相关的生命周期回调方法（如@PostConstruct注解的方法）之后。因此，如果仅依赖二级缓存来解决循环依赖，可能会遇到这样的问题：当尝试注入一个bean时，该bean的代理对象可能还没有被创建，导致注入的不是最终的代理对象，而是原始对象或是一个未完全初始化的状态。
+
+错误信息“This means that said other beans do not user final version of the bean”表明Spring检测到在循环依赖的场景中，一个bean注入的是另一个bean的非最终版本。具体来说，它意味着某个bean在注入点获得的是目标bean的早期引用，而不是经过AOP增强（即代理）后的最终版本。
+
+为了解决这个问题，Spring引入了三级缓存机制。三级缓存中存储的不是bean的实例，而是创建bean代理的工厂对象（通常是ObjectFactory）。当发生循环依赖时，Spring可以从三级缓存中获取到这个工厂对象，并使用它来延迟创建代理对象，直到所有相关的bean都完成了初始化。这样，当最终需要注入代理对象时，Spring可以确保提供的是完全初始化且经过AOP增强的最终版本。
+
+因此，如果你在添加了AOP实现后遇到了循环依赖相关的报错，很可能是因为你的Spring版本或者配置没有正确使用三级缓存机制来处理AOP代理的创建。要解决这个问题，你可以：
+
+确保你使用的Spring版本支持三级缓存解决循环依赖。
+检查你的AOP配置是否正确，包括切面（Aspect）的定义和切点（Pointcut）的设置。
+如果你使用的是XML配置，确保你启用了AOP自动代理功能（如<aop:aspectj-autoproxy>）。
+如果你是通过注解来配置AOP，确保相关的注解（如@EnableAspectJAutoProxy）已经添加到了配置类上。
+最后，请注意，循环依赖通常是一个设计上的问题，应该尽量避免。如果可能的话，重新设计你的应用程序结构，减少或消除循环依赖，可以使代码更加清晰和可维护。
