--- a/Java/redis/多级数据库的实现-哨兵.md
+++ b/Java/redis/多级数据库的实现-哨兵.md
@@ -1,4 +1,4 @@
-# 多机数据库的实现-哨兵
+# 16 多机数据库的实现-哨兵
 ## 16 Sentinel
 * Sentinel(哨兵)是Redis的高可用性解决方案:
   * 一个或多个哨兵实例（instance）组成**哨兵系统**可以监视任意**多个主服务器**以及属下的**所有从服务器**
