--- a/社招面经/2024/网上面经/分布式系统.md
+++ b/社招面经/2024/网上面经/分布式系统.md
@@ -1,7 +1,7 @@
 
 
 
-# 分布式系统 
+# 分布式事务
 
 
 ## CAP
@@ -201,3 +201,31 @@ AT事务模式并非各自提交各自的事务，而是在一个全局事务的
 这种方式的优势在于，它避免了2PC中可能出现的长时间等待和阻塞问题，提高了系统的性能和可用性。同时，通过引入undo log机制，确保了即使在异常情况下也能够实现事务的原子性和一致性。
 
 需要注意的是，AT事务模式主要适用于关系型数据库，并且依赖于数据库的ACID特性来保证事务的正确执行。对于非关系型数据库或不支持ACID特性的数据存储系统，可能需要采用其他的事务处理方案。
+
+
+
+# 分布式ID
+
+
+## UUID
+UUID（Universally Unique Identifier）是一种标识符，用于在计算机系统中唯一地标识实体。它是一个128位的数字，通常以32个十六进制数字的形式表示，中间用连字符分隔。UUID的生成算法保证了在理论上不同计算机和不同时间生成的UUID都是唯一的。
+
+UUID的唯一性和广泛应用使得它在分布式系统、数据库、网络通信等领域得到广泛使用。它可以用于标识数据库记录、文件、消息、会话等各种实体，确保它们在不同的系统和时间下都能够被唯一标识。
+
+## 雪花算法
+雪花ID（Snowflake ID）是一种分布式唯一ID生成算法，由Twitter公司开发。它的设计目标是在分布式系统中生成全局唯一的ID，以解决传统自增ID在分布式环境下可能出现的冲突和性能瓶颈问题。
+
+雪花ID的结构如下：
+
+符号位（1位）：始终为0，表示正数。
+时间戳（41位）：记录生成ID的时间戳，精确到毫秒级。
+数据中心ID（5位）：用于标识数据中心，最多支持32个数据中心。
+机器ID（5位）：用于标识机器，最多支持每个数据中心32台机器。
+序列号（12位）：每个节点在同一毫秒内生成的序列号，最多支持每毫秒生成4096个ID。
+通过将时间戳、数据中心ID、机器ID和序列号组合在一起，雪花ID可以在分布式系统中生成全局唯一的ID。由于时间戳占据了较高的位数，所以雪花ID生成的ID是递增的，可以保证在一定程度上的有序性。
+
+
+## MySql自增ID?
+MySQL自增ID是一种由MySQL数据库管理系统提供的主键生成机制。它通过自动递增的方式为每条插入的记录生成一个唯一的ID值，用于标识该记录在表中的唯一性。
+
+在MySQL中，自增ID通常与整数类型的列（如INT或BIGINT）结合使用。当插入一条新记录时，MySQL会自动为该列生成一个唯一的ID值，下一次插入时会自动递增。这样可以确保每条记录都有一个唯一的标识符，方便进行数据的查找、更新和删除操作。
